--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A simple exercise planner to help you keep track of your daily exercises."
+    />
+    <meta
+      name="keywords"
+      content="exercise, planner, fitness, manager, daily, exercises"
+    />
     <title>Fitness Manager</title>
     <link rel="stylesheet" href="./source/style/style.css" type="text/css" />
     <link rel="icon" href="./admin/branding/logo.png" type="image/png" />
