--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h1 id="title">Exercise Planner</h1>
     </header>
     <main>
-      <section id="mainContainer">
+      <section id="main-app-container">
         <div id="scheduledContainer">
           <h3>Scheduled</h3>
           <div id="insertPoint"></div>
