Conform scheduled container to html naming scheme

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <main>
       <section id="main-app-container">
-        <div id="scheduledContainer">
+        <div id="scheduled-container">
           <h3>Scheduled</h3>
           <div id="insertPoint"></div>
         </div>
