Conform insert-point to html naming scheme

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <section id="main-app-container">
         <div id="scheduled-container">
           <h3>Scheduled</h3>
-          <div id="insertPoint"></div>
+          <div id="insert-point"></div>
         </div>
         <div id="completedContainer">
           <h3>Completed</h3>
