Conform completed container to html naming scheme

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <h3>Scheduled</h3>
           <div id="insert-point"></div>
         </div>
-        <div id="completedContainer">
+        <div id="completed-container">
           <h3>Completed</h3>
         </div>
       </section>
