Conform fixed add button to html naming scheme

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </section>
     </main>
     <footer>
-      <span id="fixedAddButton" class="material-icons">add</span>
+      <span id="fixed-add-button" class="material-icons">add</span>
     </footer>
   </body>
 </html>
