#30 added dropdown menu

--- a/card-design.html
+++ b/card-design.html
@@ -1,10 +1,7 @@
-<!-- card-template.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Exercise Tracker Page</title>
     <link rel="stylesheet" href="./source/style/card.css" type="text/css" />
   </head>
 
@@ -16,6 +13,8 @@
 
         <!-- Dropdown menu for exercise type -->
         <select class="exerciseType" name="exerciseType">
+          <option value="running">Running</option>
+          <option value="benchpress">Bench Press</option>
         </select>
 
         <div class="exerciseHeader">Exercise Card</div>
