--- a/main.html
+++ b/main.html
@@ -14,6 +14,10 @@
   </head>
 
   <body>
+    <!-- import necessary scripts -->
+    <script src="./source/scripts/card.js"></script>
+    <script src="./source/scripts/newmain.js"></script>
+
     <header>
       <h1 id="title">Exercise Planner</h1>
     </header>
@@ -32,6 +36,5 @@
     <footer>
       <span id="fixedAddButton" class="material-icons">add</span>
     </footer>
-    <script src="./source/scripts/scripts.js"></script>
   </body>
 </html>
