--- a/card-template.html
+++ b/card-template.html
@@ -15,8 +15,7 @@
         <label for="completed">Completed</label>
 
         <!-- Dropdown menu for exercise type -->
-        <select class="exerciseType" name="exerciseType">
-        </select>
+        <select class="exerciseType" name="exerciseType"></select>
 
         <div class="exerciseHeader">Exercise Card</div>
         <input
@@ -25,7 +24,7 @@
           type="date"
           value="2024-05-15"
         />
-        <button>Delete</button>
+        <button class="delete-button">Delete</button>
       </div>
       <div class="contentContainer">
         <div class="statsContainer">
@@ -69,7 +68,7 @@
       </div>
       <div class="footerContainer">
         <button>Discard</button>
-        <button>Save</button>
+        <button class="save-button">Save</button>
       </div>
     </div>
   </body>
