#34 discard function completed with local storage

--- a/card-template.html
+++ b/card-template.html
@@ -67,7 +67,7 @@
         ></textarea>
       </div>
       <div class="footerContainer">
-        <button>Discard</button>
+        <button class="discard-button">Discard</button>
         <button class="save-button">Save</button>
       </div>
     </div>
