Added style changes to the card

--- a/card-template.html
+++ b/card-template.html
@@ -12,7 +12,7 @@
     <div class="mainContainer">
       <div class="headerContainer">
         <input type="checkbox" id="completed" name="completed" />
-        <label for="completed">Completed</label>
+        <label class="completed" for="completed">Completed</label>
 
         <!-- Dropdown menu for exercise type -->
         <select class="exerciseType" name="exerciseType"></select>
