#55 Made three cards in a row

--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
 
     <main>
       <section id="mainContainer">
+        <h3>Scheduled</h3>
         <div id="scheduledContainer">
-          <h3>Scheduled</h3>
         </div>
+        <hr id="lineSeperator">
+        <h3>Completed</h3>
         <div id="completedContainer">
-          <h3>Completed</h3>
         </div>
       </section>
     </main>
