--- a/card-template.html
+++ b/card-template.html
@@ -15,7 +15,7 @@
         <label class="completed" for="completed">Completed</label>
 
         <!-- Dropdown menu for exercise type -->
-        <select class="exerciseType" name="exerciseType"></select>
+        <!-- <select class="exerciseType" name="exerciseType"></select> -->
 
         <div class="exerciseHeader">Exercise Card</div>
         <input
@@ -24,7 +24,6 @@
           type="date"
           value="2024-05-15"
         />
-        <button class="delete-button">Delete</button>
       </div>
       <div class="contentContainer">
         <div class="statsContainer">
@@ -67,8 +66,11 @@
         ></textarea>
       </div>
       <div class="footerContainer">
-        <button class="discard-button">Discard</button>
-        <button class="save-button">Save</button>
+        <button class="delete-button">Delete</button>
+        <div class="rightButtons">
+          <button class="discard-button">Discard</button>
+          <button class="save-button">Save</button>
+        </div>
       </div>
     </div>
   </body>
