--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   </head>
 
   <body>
@@ -35,7 +36,11 @@
       </section>
     </main>
     <footer>
-      <span id="fixedAddButton" class="material-icons">add</span>
+      <button id="fixedAddButton" class="material-icons">
+        <i class="fas fa-plus"></i>
+    </button>
+      <button id="cardioButton">Cardio</button>
+      <button id="strengthButton">Strength</button>
     </footer>
   </body>
 </html>
