appease naming linters

--- a/card-template.html
+++ b/card-template.html
@@ -9,15 +9,15 @@
   </head>
 
   <body>
-    <div class="mainContainer">
-      <div class="headerContainer">
+    <div class="main-container">
+      <div class="header-container">
         <input type="checkbox" id="completed" name="completed" />
         <label for="completed">Completed</label>
 
         <!-- Dropdown menu for exercise type -->
         <select class="exerciseType" name="exerciseType"></select>
 
-        <div class="exerciseHeader">Exercise Card</div>
+        <div class="exercise-header">Exercise Card</div>
         <input
           style="display: inline-block"
           class="schedule-edit date-input"
@@ -26,8 +26,8 @@
         />
         <button class="delete-button">Delete</button>
       </div>
-      <div class="contentContainer">
-        <div class="statsContainer">
+      <div class="content-container">
+        <div class="stats-container">
           <label class="input-label" for="calories">Calories Burned:</label>
           <input
             type="number"
@@ -66,7 +66,7 @@
           placeholder="Enter any additional notes"
         ></textarea>
       </div>
-      <div class="footerContainer">
+      <div class="footer-container">
         <button class="discard-button">Discard</button>
         <button class="save-button">Save</button>
       </div>
