--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
 
     <main>
-      <section id="mainContainer">
+      <section id="main-container">
         <div id="scheduledContainer">
           <h3>Scheduled</h3>
         </div>
