more naming fixes

--- a/card-template.html
+++ b/card-template.html
@@ -15,7 +15,7 @@
         <label for="completed">Completed</label>
 
         <!-- Dropdown menu for exercise type -->
-        <select class="exerciseType" name="exerciseType"></select>
+        <select class="exercise-type" name="exercise-type"></select>
 
         <div class="exercise-header">Exercise Card</div>
         <input
