--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 
     <main>
       <section id="main-container">
-        <div id="scheduledContainer">
+        <div id="scheduled-container">
           <h3>Scheduled</h3>
         </div>
-        <div id="completedContainer">
+        <div id="completed-container">
           <h3>Completed</h3>
         </div>
       </section>
     </main>
     <footer>
-      <span id="fixedAddButton" class="material-icons">add</span>
+      <span id="fixed-add-button" class="material-icons">add</span>
     </footer>
   </body>
 </html>
