--- a/card-template.html
+++ b/card-template.html
@@ -1,6 +1,5 @@
-<!-- card-template.html -->
+<!doctype html>
 <!-- djlint:off -->
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
