--- a/index.html
+++ b/index.html
@@ -21,10 +21,19 @@
     <script src="./source/scripts/main.js"></script>
     <script src="./source/scripts/crud.js"></script>
     <script src="./source/scripts/localdata.js"></script>
+    <script src="./source/scripts/sorting.js"></script>
     <script src="./source/scripts/ExerciseCard.js"></script>
 
+    
     <header>
       <h1 id="title">Exercise Planner</h1>
+      <div class="sort-container">
+        <label for="sort-dropdown">Sort By:</label>
+        <select id="sort-dropdown">
+          <option value="newest">Newest</option>
+          <option value="oldest">Oldest</option>
+        </select>
+      </div>
     </header>
 
     <main>
