--- a/index.html
+++ b/index.html
@@ -22,23 +22,66 @@
     <script src="./source/scripts/crud.js"></script>
     <script src="./source/scripts/localdata.js"></script>
     <script src="./source/scripts/ExerciseCard.js"></script>
-
+    <script src="./source/scripts/storeinfo.js"></script>
     <header>
       <h1 id="title">Exercise Planner</h1>
     </header>
 
     <main>
-      <section id="main-container">
+      <div class="container1">
+        <div id="login-form">
+            <h2>Login to Your Account</h2>
+            <form id="login-form" action="javascript:void(0);" method="post" onsubmit="return login(event)">
+                <div class="form-group">
+                    <label for="register-username">Username:</label>
+                    <input type="text" id="login-username" name="login-username" required>
+                </div>
+                <div class="form-group">
+                    <label for="login-email">Email:</label>
+                    <input type="email" id="login-email" name="login-email" required>
+                </div>
+                <div class="form-group">
+                    <label for="login-password">Password:</label>
+                    <input type="password" id="login-password" name="login-password" required>
+                </div>
+                
+                <button type="submit" onclick="login()" >Login</button>
+               
+            </form>
+            <p style= "text-align: center;">Don't have an account? <a href="#" onclick="showCreateAccount()" style="text-align: center;">Create one</a></p>
+        </div>
+        <div id="create-account-form" style="display:none;">
+            <h2 >Create an Account</h2>
+            <form id="register-form" action="#" method="post">
+                <div class="form-group">
+                    <label for="register-username">Username:</label>
+                    <input type="text" id="register-username" name="register-username" required>
+                </div>
+                <div class="form-group">
+                    <label for="register-email">Email:</label>
+                    <input type="email" id="register-email" name="register-email"  required>
+                </div>
+                <div class="form-group">
+                    <label for="register-password">Password:</label>
+                    <input type="password" id="register-password" name="register-password" required>
+                </div>
+                <button type="submit" onclick="register()">Create Account</button>
+            </form>
+            <p style= "text-align: center;">Already have an account? <a href="#" onclick="showLoginForm()">Login</a></p>
+        </div>
+      </div>  
+      <section id="main-container" style="display:none">
         <div id="scheduled-container">
           <h3>Scheduled</h3>
         </div>
         <div id="completed-container">
           <h3>Completed</h3>
         </div>
+        <button class="logout-button" onclick="logout()">Logout</button>
       </section>
     </main>
     <footer>
-      <span id="fixed-add-button" class="material-icons">add</span>
+      <span id="fixed-add-button" class="material-icons" style="display:none">add</span>
     </footer>
   </body>
 </html>
