--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container1">
         <div id="login-form">
             <h2>Login to Your Account</h2>
-            <form id-unique="login-form" action="javascript:void(0);" method="post" onsubmit="return login(event)">
+            <form id-unique="login-form" action="javascript:abc();" method="post" onsubmit="return login(event)">
                 <div class="form-group">
                     <label for="register-username">Username:</label>
                     <input type="text" id="login-username" name="login-username" required>
@@ -50,7 +50,7 @@
             </form>
             <p>Don't have an account? <a href="#" onclick="showCreateAccount()" style="text-align: center;">Create one</a></p>
         </div>
-        <div id="create-account-form" style="display:none;">
+        <div id="create-account-form">
             <h2 >Create an Account</h2>
             <form id="register-form" action="#" method="post">
                 <div class="form-group">
@@ -70,7 +70,7 @@
             <p>Already have an account? <a href="#" onclick="showLoginForm()">Login</a></p>
         </div>
       </div>  
-      <section id="main-container" style="display:none">
+      <section id="main-container">
         <div id="scheduled-container">
           <h3>Scheduled</h3>
         </div>
@@ -81,7 +81,7 @@
       </section>
     </main>
     <footer>
-      <span id="fixed-add-button" class="material-icons" style="display:none">add</span>
+      <span id="fixed-add-button" class="material-icons" >add</span>
     </footer>
   </body>
 </html>
