--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="container1">
         <div id="login-form">
             <h2>Login to Your Account</h2>
-            <form id-unique="login-form" action="javascript:abc();" method="post" onsubmit="return login(event)">
+            <form id-unique="login-form" action="#" method="post" onsubmit="return login(event)">
                 <div class="form-group">
                     <label for="register-username">Username:</label>
                     <input type="text" id="login-username" name="login-username" required>
@@ -48,7 +48,7 @@
                 <button type="submit" onclick="login()" >Login</button>
                
             </form>
-            <p>Don't have an account? <a href="#" onclick="showCreateAccount()" style="text-align: center;">Create one</a></p>
+            <p>Don't have an account? <a href="#" onclick="showCreateAccount()">Create one</a></p>
         </div>
         <div id="create-account-form">
             <h2 >Create an Account</h2>
