#65 added script imports and renamed the dropdown menu class to exerciseSelection

--- a/card-template.html
+++ b/card-template.html
@@ -14,8 +14,8 @@
         <input type="checkbox" id="completed" name="completed" />
         <label class="completed" for="completed">Completed</label>
 
-        <!-- Dropdown menu for exercise type -->
-        <!-- <select class="exerciseType" name="exerciseType"></select> -->
+        <!-- Dropdown menu for exercise choices -->
+        <select class="exerciseSelection" name="exerciseSelection"></select>
 
         <div class="exerciseHeader">Exercise Card</div>
         <input
