--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
   </head>
 
   <body>
@@ -20,6 +23,7 @@
     <script src="./source/scripts/crud.js"></script>
     <script src="./source/scripts/localdata.js"></script>
     <script src="./source/scripts/ExerciseCard.js"></script>
+    <script src="./source/scripts/exercisetype.js"></script>
 
     <header>
       <h1 id="title">Exercise Planner</h1>
@@ -28,17 +32,15 @@
     <main>
       <section id="mainContainer">
         <h3>Scheduled</h3>
-        <div id="scheduledContainer">
-        </div>
+        <div id="scheduledContainer"></div>
         <h3>Completed</h3>
-        <div id="completedContainer">
-        </div>
+        <div id="completedContainer"></div>
       </section>
     </main>
     <footer>
       <button id="fixedAddButton" class="material-icons">
         <i class="fas fa-plus"></i>
-    </button>
+      </button>
       <button id="cardioButton">Cardio</button>
       <button id="strengthButton">Strength</button>
     </footer>
