--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
+    <style>
+      @import url("./source/style/login.css");;
+    </style>
   </head>
 
   <body>
