added id to the login button for cypress, added cypress to package, added login function to cypress

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <style>
-      @import url("./source/style/login.css");;
+      @import url("./source/style/login.css");
     </style>
   </head>
 
@@ -48,7 +48,7 @@
                     <input type="password" id="login-password" name="login-password" required>
                 </div>
                 
-                <button type="submit" onclick="login()" >Login</button>
+                <button type="submit" id="login-button" onclick="login()" >Login</button>
                
             </form>
             <p>Don't have an account? <a href="#" onclick="showCreateAccount()">Create one</a></p>
