#68 #69 Fixed color contrast and added toggle tasks pages

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 
     <main>
       <section id="mainContainer">
-        <h3>Scheduled</h3>
+        <button class="toggle" id="toggleScheduled">Scheduled</button>
+        <button class="toggle" id="toggleCompleted">Completed</button>
         <div id="scheduledContainer"></div>
-        <h3>Completed</h3>
         <div id="completedContainer"></div>
       </section>
     </main>
