--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <label for="register-password">Password:</label>
                     <input type="password" id="register-password" name="register-password" required>
                 </div>
-                <button type="submit" onclick="register()">Create Account</button>
+                <button type="button" onclick="register()">Create Account</button>
             </form>
             <p>Already have an account? <a href="#" onclick="showLoginForm()">Login</a></p>
         </div>
