#75 check valid values

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="./source/scripts/localdata.js"></script>
     <script src="./source/scripts/ExerciseCard.js"></script>
     <script src="./source/scripts/exercisetype.js"></script>
+    <script src="./source/scripts/errorhandle.js"></script>
 
     <header>
       <h1 id="title">Exercise Planner</h1>
