fix linter issues

--- a/card-template.html
+++ b/card-template.html
@@ -16,7 +16,7 @@
         <label class="completed" for="completed">Completed</label>
 
         <!-- Dropdown menu for exercise type -->
-        <!-- <select class="exerciseType" name="exerciseType"></select> -->
+        <!-- <select class="exercise-type" name="exercise-type"></select> -->
 
         <div class="exercise-header">Exercise Card</div>
         <input
@@ -66,9 +66,9 @@
           placeholder="Enter any additional notes"
         ></textarea>
       </div>
-      <div class="footerContainer">
+      <div class="footer-container">
         <button class="delete-button">Delete</button>
-        <div class="rightButtons">
+        <div class="right-buttons">
           <button class="discard-button">Discard</button>
           <button class="save-button">Save</button>
         </div>
