--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div id="scheduled-container">
         </div>
         <h3>Completed</h3>
-        <div id="completedContainer">
+        <div id="completed-container">
         </div>
         <button class="logout-button" onclick="logout()">Logout</button>
       </section>
