removed download.htm and fixed sort by label

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       </div>  
       <section id="main-container">
         <div id="sort-title">
-          <h3 >Sortby</h3>
+          <h4>Sort By</h4>
         </div>
         <button id="fixed-new-button" onclick="return sortExerciseCards(event, 'newest')">Newest</button>
         <button id="fixed-old-button" onclick="return sortExerciseCards(event, 'oldest')">Oldest</button>
