--- a/card-template.html
+++ b/card-template.html
@@ -25,10 +25,10 @@
       </div>
 
       <!-- Dropdown menu for exercise choices -->
-      <select class="exerciseSelection" name="exerciseSelection"></select>
+      <select class="exercise-selection" name="exercise-selection"></select>
       
-      <div class="contentContainer">
-        <div class="statsContainer">
+      <div class="content-container">
+        <div class="stats-container">
           <label class="input-label" for="calories">Calories Burned:</label>
           <input
             type="number"
