--- a/index.html
+++ b/index.html
@@ -79,26 +79,19 @@
         </div>
       </div>  
       <section id="main-container">
-        <h3>Scheduled</h3>
-        <div id="scheduled-container">
-        </div>
-        <h3>Completed</h3>
-        <div id="completed-container">
-        </div>
+        <button class="toggle" id="toggle-scheduled">Scheduled</button>
+        <button class="toggle" id="toggle-completed">Completed</button>
+        <div id="scheduled-container"></div>
+        <div id="completed-container"></div>
         <button class="logout-button" onclick="logout()">Logout</button>
-      <section id="mainContainer">
-        <button class="toggle" id="toggleScheduled">Scheduled</button>
-        <button class="toggle" id="toggleCompleted">Completed</button>
-        <div id="scheduledContainer"></div>
-        <div id="completedContainer"></div>
       </section>
     </main>
     <footer>
-      <button id="fixedAddButton" class="material-icons">
+      <button id="fixed-add-button" class="material-icons">
         <i class="fas fa-plus"></i>
       </button>
-      <button id="cardioButton">Cardio</button>
-      <button id="strengthButton">Strength</button>
+      <button id="cardio-button">Cardio</button>
+      <button id="strength-button">Strength</button>
     </footer>
   </body>
 </html>
