Us4 error handling (#83)
* #75 check valid values

* #74 #75 shows an error if calories, sets, duration has invalid values or if exercise is not selected

* bug fixing

* fixed bug of multiple cards

* #73 completed fixed

* hide buttons bug fix

* deleted unnecessary comments

* fixed tests to accomodate the new exercise type

* removed redundant code

* added ALOT of tests for error-handling

---------

Co-authored-by: hsdehaini <99140276+hsdehaini@users.noreply.github.com>
Co-authored-by: 3rr0r51 <JK9999345@gmail.com>

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <script src="./source/scripts/ExerciseCard.js"></script>
     <script src="./source/scripts/exercisetype.js"></script>
     <script src="./source/scripts/storeinfo.js"></script>
-    
+        <script src="./source/scripts/errorhandle.js"></script>
+
     <header>
       <h1 id="title">Exercise Planner</h1>
       
