Updated scripts to switch lang
now automatically switch language based on user pref

--- a/index_arabic.html
+++ b/index_arabic.html
@@ -21,6 +21,7 @@
     <style>
       @import url("./source/style/login.css");
     </style>
+    <!--a bit script to adjust webpage lang based on browser setting-->
     <script>
       document.addEventListener("DOMContentLoaded", function() {
         var userLang = navigator.language || navigator.userLanguage;
